// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input > matches snapshot — default 1`] = `
<div>
  <label
    class="group relative flex"
  >
    <input
      class="peer class-input peer font-display h-controllg   
   font-normal text-base leading-[150%] text-black px-4 relative rounded-xl transition-all duration-300
   focus:outline-none focus:border-blue focus:shadow-[0_0_0_1px_var(--color-blue)] w-full default bg-grey border border-grey"
      id="«r2»"
      placeholder=" "
      type="text"
    />
    <span
      class="
  class-span font-normal font-display leading-[150%] absolute z-[1] transition-all duration-300 px-4 peer-focus:text-blue
  peer-focus:text-[11px] peer-focus:top-0  peer-focus:-translate-y-0 left-0 text-xs11
   text-dark-grey top-1/2 -translate-y-1/2 "
    >
      Email
    </span>
  </label>
</div>
`;

exports[`Input > matches snapshot — with error 1`] = `
<div>
  <label
    class="group relative flex"
  >
    <input
      class="peer class-input peer font-display h-controllg   
   font-normal text-base leading-[150%] text-black px-4 relative rounded-xl transition-all duration-300
   focus:outline-none focus:border-blue focus:shadow-[0_0_0_1px_var(--color-blue)] w-full error border border-red bg-grey shadow-[0_0_0_1px_var(--color-red)]"
      id="«r3»"
      placeholder=" "
      type="text"
    />
    <span
      class="
  class-span font-normal font-display leading-[150%] absolute z-[1] transition-all duration-300 px-4 peer-focus:text-blue
  peer-focus:text-[11px] peer-focus:top-0  peer-focus:-translate-y-0 left-0 text-xs11
   text-dark-grey top-1/2 -translate-y-1/2 "
    >
      Username
    </span>
  </label>
</div>
`;
